# deeplx-all

./: README.md  pom.xml
deeplx-micronaut/: README.md  aot-jar.properties  aot-native-image.properties  micronaut-cli.yml  pom.xml
deeplx-micronaut/src/main/java/com/gchuyun/deeplx/: Application.java  DeepLClient.java  DeepLDTO.java  DeepLXController.java  DeepLXDTO.java
deeplx-micronaut/src/main/resources/: application.yml  logback.xml
deeplx-micronaut/src/test/java/com/gchuyun/deeplx/: DeepLXTest.java
deeplx-quarkus/: README.md  pom.xml
deeplx-quarkus/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
deeplx-quarkus/src/main/java/com/gchuyun/deeplx/: DeepLClient.java  DeepLDTO.java  DeepLService.java  DeepLXDTO.java  GreetingResource.java
deeplx-quarkus/src/main/resources/: application.properties
deeplx-quarkus/src/test/java/com/gchuyun/deeplx/: GreetingResourceIT.java  GreetingResourceTest.java
deeplx-rust/: Cargo.toml  build.rs
deeplx-rust/nested-struct/: Cargo.toml
deeplx-rust/nested-struct/src/: lib.rs  main.rs  test.rs
deeplx-rust/src/: asyn_translate.rs  deepl_client.rs  deepl_dto.rs  deeplx_dto.rs  main.rs  test.rs
deeplx-spring/: pom.xml
deeplx-spring/src/main/java/com/gchuyun/deeplx/: AsynTranslateJob.java  DeepLClient.java  DeepLXController.java  DeepLXDTO.java  DeeplxSpringApplication.java
deeplx-spring/src/test/java/com/gchuyun/deeplx/: DeeplxSpringApplicationTests.java
deeplx-vertx/: Dockerfile  README.md  pom.xml
deeplx-vertx/src/main/java/com/gchuyun/deeplx/: DeepLClient.java  (+3 more)
(+1 files in other folders)
