[package]
name = "nested-struct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# proc-macro = true

[dependencies]
# proc-macro2 = "1.0"
# quote = "1.0"
# syn = { version = "1.0", features = ["extra-traits","full","visit","visit-mut"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eager = "0.1.0"
quote = "1.0.9"